src/components/header/header.scss
.header {
  height: 600px;
  width: 100%;
  display: flex;
  flex-direction: column;
  border: 2px;

  .logo-container {
    height: 40%;
    display: flex;
    justify-content: center;
    margin: auto;
    width: 100%;
  }

  .options {
    width: 90%;
    height: 30%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    cursor: pointer;
    margin-top: 15px;

    .option {
      padding: 5px 10px;
      color: black;
    }
    a:hover {
      text-decoration-line: underline;
      color: black;
    }
    .selected {
      color: #ed1e24;
    }
  }

  h3 {
    margin: 0 !important;
    font-size: xx-large;
    font-weight: 600;
  }
}

@media screen and (min-width: 450px) {
  .header {
    height: 600px;
    width: 100%;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin-bottom: 25px;
    border: 2px;
    border-color: black;

     .logo-container {
    height: 70%;
    margin: 0 auto;
    width: 100%;
  }

  .options {
    width: 90%;
    height: 20%;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
    cursor: pointer;
    margin-top: 15px;

    .option {
      padding: 5px 10px;
      color: black;
    }
    a:hover {
      text-decoration-line: underline;
      color: black;
    }
    .selected {
      color: red;
    }
  }

    .logo {
      max-width: 825px;
      max-height: 420px;
    }

    .options {
      width: 100%;
      height: 22%;
      display: flex;
      align-items: center;
      justify-content: center;
      margin-top: 10px;

      .option {
        padding: 10px 15px;
      }
      .selected {
        color: red;
      }
    }
  }
}

